# ahj-diplom-client

./: .gitignore  manage.py  pyproject.toml
ahj-diplom/: README.md  next.config.js  package.json  pnpm-lock.yaml
ahj-diplom/src/: auth.config.ts  auth.ts
ahj-diplom/src/app/: globals.css  layout.tsx  page.tsx
ahj-diplom/src/app/dashboard/: layout.tsx  page.tsx
ahj-diplom/src/app/download/: route.ts
ahj-diplom/src/components/: ContextProvider.tsx  DataUploadContextProvider.tsx  DeleteButton.tsx  Emoji.tsx  FileUploadContextProvider.tsx  GeoButton.tsx  GoogleMapsModal.tsx  ImageUploadButton.tsx  LoginForm.tsx  Loginform.tsx  Logout.tsx  MainInput.tsx  MessagesBox.tsx  Modal.tsx  NavLinks.tsx  Search.tsx  SideBar.tsx  Spinner.tsx  UploadButton.tsx  WebSocketContextProvider.tsx
ahj-diplom/src/components/inputComponents/: Emoji.tsx  GeoButton.tsx  GoogleMapsModal.tsx  MainInput.tsx  UploadButton.tsx
ahj-diplom/src/components/sideBarComponents/: AudioItem.tsx  AudioTab.tsx  FileTab.tsx  MediaTab.tsx  PhotoItem.tsx  PhotoTab.tsx  SideBar.tsx  VideoItem.tsx
ahj-diplom/src/context/: index.ts
ahj-diplom/src/hooks/: useMessages.ts  useSSE.ts
ahjDiplom/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
app/: consumers.py  models.py  routing.py  views.py
