[tool.poetry]
name = "ahjdiplom"
version = "0.1.0"
description = ""
authors = ["Liaksej <tarusov.liaksej@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
djangorestframework = "^3.14.0"
channels = "^4.0.0"
pillow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
